# zed-minimax-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml  extension.wasm  lefthook.yml  release-plz.toml  rust-toolchain.toml
docs/: server.ts  start.sh
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: main.rs  main.rs.bck
src/: lib.rs
