[package]
name = "zed-proxy-server"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "zed-proxy-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros", "net", "rt-multi-thread", "signal", "time"] }